--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.Albums {
+  border: black 1px solid;
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+  max-width: 200px;
+  min-width: 200px;
+  text-align: center;
+}
