--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -13,69 +13,72 @@ nav {
 
 .headerTop {
   display: flex;
-  width: 100vw;
   padding-bottom: 10px;
+  width: 100vw;
 }
 
 .headerBottom {
+  align-items: center;
   border-top: 2px solid #666665;
   display: flex;
-  align-items: center;
   width: 100vw;
 }
 
 .left {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  height: 25.9px;
-  width: 33.33%;
   border-right: 2px solid #666665;
-  text-decoration: none;
-  font-weight: 700;
   color: white;
+  display: flex;
+  font-weight: 700;
+  height: 25.9px;
+  justify-content: center;
+  text-decoration: none;
+  width: 33.33%;
 }
 
 .center {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  height: 25.9px;
-  width: 33.33%;
-  text-decoration: none;
-  font-weight: 700;
   color: white;
+  display: flex;
+  font-weight: 700;
+  height: 25.9px;
+  justify-content: center;
+  text-decoration: none;
+  width: 33.33%;
 }
 
 .rigth {
-  display: flex;
-  justify-content: center;
   align-items: center;
-  width: 33.33%;
-  height: 25.9px;
   border-left: 2px solid #666665;
-  text-decoration: none;
-  font-weight: 700;
   color: white;
+  display: flex;
+  font-weight: 700;
+  height: 25.9px;
+  justify-content: center;
+  text-decoration: none;
+  width: 33.33%;
 }
 
 .rigth:hover, .left:hover, .center:hover {
-  color: #06ee89
+  color: #06ee89;
 }
 
 .userImage {
   border-radius: 100%;
+  height: 40px;
+  width: 40px;
 }
 
 .nameImage {
-  display: flex;
-  text-align: center;
-  justify-content: center;
   align-items: center;
-  background-color: #06ee89;
   border-radius: 10px;
   color: white;
+  display: flex;
+  justify-content: center;
+  max-height: 50px;
+  max-width: 300px;
   padding: 2px;
+  text-align: center;
 }
 
 .descriptionHeader {
@@ -83,19 +86,18 @@ nav {
 }
 
 .userNameHeader {
-  text-align: center;
   margin: 0;
   margin-left: 5px;
   padding: 3px;
+  text-align: center;
 }
 
 .divUserNameHeader {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   width: 50%;
-  
 }
 
 .DivlogoTrybetunesHeader {
@@ -105,17 +107,13 @@ nav {
 }
 
 .loadingConst {
+  align-items: center;
+  color: white;
+  border-bottom: #313131 30px;
   display: flex;
   justify-content: center;
-  align-items: center;
   margin: 0;
   max-height: 102px;
   min-height: 102px;
   width: 100%;
-  border-bottom: #313131 30px;
-}
-
-.userImage {
-  width: 40px;
-  height: 40px;
 }
